Projet total/Assembleur/tests/bad/testfile-bad-jump-1.ms
;jalr and jr are not visible to the programmer : use 'jal' and 'jmp' instead 
jalr %rax %rbx
jr %rax